--- a/style.css
+++ b/style.css
@@ -136,3 +136,117 @@ form button {
 body {
   background-color: #0e0e13;
 }
+
+
+/*Pagina Noticias*/
+.noticias_titulo{
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  font-size: 100px;
+  color: #FFB038;
+  text-shadow: 
+                -2px -2px 0 #FCFF52,  
+                2px -2px 0 #FCFF52,
+                -2px 2px 0 #FCFF52,
+                2px 2px 0 #FCFF52,
+                0 0 2px #FCFF52; /* Ajuste para asegurar el contorno */
+}
+.buscador{
+  margin: 0 auto;
+  margin-top: 70px;
+  width: max-content;
+  height: max-content;
+  display: flex;
+  background: white;
+  border-radius: 20px;
+}
+.buscador_input{
+  width: 550px;
+  font-size: xx-large;
+  background: #5f9ea000;
+  border: solid white;
+  outline: none;
+  margin-left: 10px;
+  font-family: 'Roboto', sans-serif;
+}
+.lupa{
+  margin-left: 10px;
+    margin-top: 3px;
+    margin-bottom: 3px;
+    height: 41px;
+    opacity: 50%;
+}
+.noticia{
+  display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 100px;
+}
+.img_noticia{
+  width: 400px;
+  height: 400px;
+  background: aliceblue;
+  overflow: hidden;
+  border-radius: 10px;
+  border: solid orange;
+}
+.img_noticia img{
+  max-block-size: -webkit-fill-available;
+    overflow: hidden;
+}
+.contenido_noticia{
+  display: block;
+    /*background: #2a2a2a;*/
+    height: 400px;
+    width: 650px;
+    margin-left: 50px;
+}
+.titulo_noticia{
+  width: 650px;
+
+   
+}
+.titulo_noticia h1{
+  font-family: 'Roboto', sans-serif;
+  font-size: 45px;
+  color: #FFBE5E;
+  padding: 2px;
+}
+.resumen_noticia{
+  /*height: 350px;*/
+  width: 650px;
+  background: bottom;
+}
+.resumen_noticia h1{
+  margin-top: 45px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 28px;
+  color: #d0d0d0;
+  padding: 2px;
+}
+.leer_mas{
+  font-family: 'Roboto', sans-serif;
+    font-size: 28px;
+    color: #0094FF;
+    padding: 2px;
+}
+.fa-solid, .fas {
+  font-weight: 900;
+  overflow: hidden;
+  margin-right: 5px;
+}
+.fecha_noticia{
+  margin-top: 10px;
+  color: #898989;
+    font-family: 'Roboto', sans-serif;
+    font-size: 28px;
+}
+.error_noticia{
+  text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 100px;
+    color: #ff6060;
+    margin-top: 100px;
+}
+
+/*Fin Pagina Noticias*/
