--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 * {
   margin: 0;
   padding: 0;
@@ -8,6 +9,68 @@
 /*TODO CARO PAGINA VOLUNTARIADO: posiblemente ampliar el ancho del contenedor, 
 lo que implique realizar un cambio en Javascript. Hay mucho espacio en ancho
 desperdiciado y seguramente sea una posible critica al diseño de la pagina*/
+.parallax{
+  width: 100vw;
+  height: 100vh;
+}
+
+.Imagen{
+  z-index: 0;
+  width: 100vw;
+  height: 100vh;
+  max-height: 100vh;
+  background-size: cover;
+  filter:contrast(90%);
+  background-position: center;
+}
+
+
+.imagenCielo{
+  z-index:2;
+background-image: url("img/cielo.png");
+
+}
+
+.imagenMontania{
+  height: 105vh;
+  position: absolute;
+  left: -0.75%;
+  width: 102vw;
+  top: -6px;
+  z-index: 4;
+background-image: url("img/Montania.png");
+}
+
+
+.tituloBanner{
+  position: absolute;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+margin: auto;
+  font-family: "Bubblegum Sans", sans-serif;
+  z-index:20;
+  font-size: 200px;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.tituloBanner:nth-child(1){
+  z-index: 80;
+  color: #000;
+}
+
+.tituloBanner:nth-child(2){
+  z-index: 100;
+  color: #FF8B20;
+}
+
+.nav{
+  position: relative;
+  z-index: 5;
+  background-color: #121217;
+}
 
 .contenedorFormVoluntariado {
   width: 360px;
