--- a/style.css
+++ b/style.css
@@ -11,24 +11,23 @@ lo que implique realizar un cambio en Javascript. Hay mucho espacio en ancho
 desperdiciado y seguramente sea una posible critica al diseño de la pagina*/
 .parallax{
   width: 100vw;
-  height: 100vh;
+  max-height: 100vh;
 }
 
 .Imagen{
-  z-index: 0;
+  z-index: 1;
   width: 100vw;
   height: 100vh;
   max-height: 100vh;
   background-size: cover;
-  filter:contrast(90%);
   background-position: center;
+  background-repeat: no-repeat;
 }
 
 
 .imagenCielo{
   z-index:2;
 background-image: url("img/cielo.png");
-
 }
 
 .imagenMontania{
@@ -42,34 +41,61 @@ background-image: url("img/Montania.png");
 }
 
 
-.tituloBanner{
+.tituloBanner {
   position: absolute;
-top: 0;
-left: 0;
-right: 0;
-bottom: 0;
-margin: auto;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   font-family: "Bubblegum Sans", sans-serif;
-  z-index:20;
+  z-index: 20;
   font-size: 200px;
   font-weight: 400;
   font-style: normal;
+  text-align: center;
 }
 
-.tituloBanner:nth-child(1){
+.tituloBanner:nth-child(2) {
+  left: 49%;
   z-index: 80;
   color: #000;
 }
 
-.tituloBanner:nth-child(2){
+.tituloBanner:nth-child(3) {
   z-index: 100;
   color: #FF8B20;
 }
 
 .nav{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
+  height: 3.5rem;
   z-index: 5;
   background-color: #121217;
+}
+
+.nav a{
+  padding:1rem 5rem;
+  color: #C7C7C7;
+  text-decoration: none;
+}
+
+.nav a:nth-child(3){
+  color:white;
+  background-color: #0094ff;
+  border-radius: 20px;
+}
+
+.nav a:nth-child(3):hover{
+  color:#0094ff;
+  background-color: white;
+  border-radius: 20px;
+}
+
+.nav a:hover{
+  color: rgb(235, 235, 235);
+  background-color: #000;
 }
 
 .contenedorFormVoluntariado {
@@ -322,3 +348,80 @@ body {
 }
 
 /*Fin Pagina Noticias*/
+
+
+footer {
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
+  gap: 10px;
+}
+
+.redes {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+.texto {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+}
+
+footer {
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
+  gap: 10px;
+  padding: 0 5rem;
+}
+
+.border-wrapper {
+  position: absolute;
+  width: 50%;
+  height: 10px;
+  top: 0;
+  left: 5rem;
+  right: 5rem;
+  height: 40px;
+  border-top: 15px solid rgb(136, 136, 136);
+  background-color: rgb(255, 255, 255);
+}
+
+
+.redes {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.texto {
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+  display: flex;
+  justify-content: space-around;
+  color: rgb(238, 238, 238);
+  margin: 0 1rem;
+}
+
+footer img {
+  grid-column: 3 / 3;
+  grid-row: 1 / 3;
+  display: flex;
+  width: 450px;
+  height: 350px;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.redes span, .texto, footer img {
+  margin: 10px;
+}
+
+.redes span:hover{
+  cursor:pointer;
+  color: #cf6300 !important;
+}
