--- a/style.css
+++ b/style.css
@@ -353,8 +353,43 @@ body {
   margin-top: 100px;
 }
 
+
 /*Fin Pagina Noticias*/
 
+
+/*Inicio Pagina LogIn*/
+.loginDiv{
+  width: 25%;
+  margin: 5rem auto;
+  color: rgb(233, 232, 232);
+}
+
+.loginDiv img{
+  margin:0 auto;
+  width: 380px;
+  height: 290px;
+}
+
+.loginDiv label{
+  display: block;
+}
+.loginDiv input{
+  width: 20rem;
+  height: 1.5rem;
+  margin: 2px 0 9px 0;
+}
+
+.loginDiv h5 span{
+  margin: 9px auto 0 auto;
+  font-size: larger;
+  color: #f1aa57;
+}
+
+.loginDiv h5 span:hover{
+  cursor: pointer;
+  color: #ba822e;
+}
+/*Fin Pagina LogIn*/
 
 footer {
   padding: 20px;
@@ -417,8 +452,8 @@ footer img {
   grid-column: 3 / 3;
   grid-row: 1 / 3;
   display: flex;
-  width: 450px;
-  height: 350px;
+  width: 350px;
+  height: 290px;
   justify-content: flex-end;
   align-items: center;
 }
