--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   padding: 0;
   overflow-x: hidden; /* Caro:Saca la barra de desplazamiento al ancho, 
   quitar si quieren o les jode en algo, no cambia en negativo nada de lo trabajado si se quita.*/
+  font-family: "Roboto", sans-serif;
 }
 
 
@@ -131,22 +132,27 @@ desperdiciado y seguramente sea una posible critica al diseño de la pagina*/
   text-align: center;
 }
 .introduccionform h1{
+  font-family: "Roboto", sans-serif;
+  color: #ffb038;
   margin-bottom: 20px;
   padding-top: 10px;
   border-top: 1px solid #cf6300;
 }
 .introduccionform h2{
+  font-family: "Roboto", sans-serif;
+  color: #ffb038;
   margin-bottom: 20px;
 }
 .introduccionform p{
+  font-family: "Roboto", sans-serif;
   padding-bottom: 10px;
   border-bottom: 1px solid #cf6300;
 }
-h3 {
+.contenedorFormVoluntariado h3 {
   text-align: center;
+  font-family: "Roboto", sans-serif;
   margin-bottom: 20px;
-  color: #cf6300;
-  background-color: #121217;
+  color: #ffb038;
 }
 .contenedorFormVoluntariado form {
   background-color: #121217;
@@ -438,6 +444,7 @@ footer {
 .redes {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
+  overflow: hidden;
 }
 
 .texto {
@@ -473,6 +480,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  
 }
 
 .texto {
@@ -501,4 +509,5 @@ footer img {
 .redes span:hover{
   cursor:pointer;
   color: #cf6300 !important;
+  
 }
