--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ desperdiciado y seguramente sea una posible critica al diseño de la pagina*/
   max-height: 100vh;
   background-size: cover;
   background-position: center;
+  filter: brightness(0.75);
 }
 
 .imagenCielo {
@@ -102,6 +103,10 @@ desperdiciado y seguramente sea una posible critica al diseño de la pagina*/
   background-color: #000;
 }
 /*Inicio slider*/
+.integrarFlechas{
+  display: block;
+  width: 100vw;
+}
 .slide{
   overflow-x: visible;
   height: 80vh;
@@ -111,6 +116,53 @@ display: flex;
 flex-direction: column;
 flex-wrap: wrap;
 transition: all 0.3 ease-in;
+}
+
+.flechaDerecha{
+  z-index: 10;
+position: absolute;
+right: 5rem;
+top:140vh;
+font-size: 72px;
+color: white;
+cursor: pointer;
+}
+
+.flechaIzquierda{
+  position:absolute;
+  z-index: 10;
+  top:140vh;
+  left:5.5%;
+  font-size: 72px;
+color: white;
+cursor: pointer;
+}
+
+.fa-circle{
+  color: white;
+  font-size: 32px;
+  overflow-y: hidden;
+}
+
+.fa-circle:nth-child(3){
+  position: absolute;
+  left: 44%;
+  top:180vh;
+}
+
+.fa-circle:nth-child(4){
+  position: absolute;
+  left: 47%;
+  top:180vh;
+}
+.fa-circle:nth-child(5){
+  position: absolute;
+  left: 50%;
+  top:180vh;
+}
+
+.fa-solid{
+  font-size: 34px;
 }
 
 
@@ -428,7 +480,7 @@ body {
 /*Inicio Pagina LogIn*/
 
 .cienvehache{
-  height: 91vh;
+  height: 110vh;
   align-content: center;
 }
 .loginDiv{
