--- a/style.css
+++ b/style.css
@@ -81,6 +81,8 @@ desperdiciado y seguramente sea una posible critica al diseño de la pagina*/
 }
 
 .nav a{
+  font-family: "Roboto", sans-serif;
+  font-size: 24px;
   padding:1rem 5rem;
   color: #C7C7C7;
   text-decoration: none;
@@ -102,11 +104,24 @@ desperdiciado y seguramente sea una posible critica al diseño de la pagina*/
   color: rgb(235, 235, 235);
   background-color: #000;
 }
+
+.nav a i{
+  font-size: 24px;
+}
 /*Inicio slider*/
 .integrarFlechas{
   display: block;
   width: 100vw;
 }
+
+.integrarFlechas h2{
+  margin: 1rem 0 1rem 36vw;
+  width: 100%;
+  color: #d8801b;
+  font-family: "Roboto", sans-serif;
+  font-size: 48px;
+}
+
 .slide{
   overflow-x: visible;
   height: 80vh;
@@ -144,18 +159,18 @@ cursor: pointer;
   overflow-y: hidden;
 }
 
-.fa-circle:nth-child(3){
+.fa-circle:nth-child(4){
   position: absolute;
   left: 44%;
   top:180vh;
 }
 
-.fa-circle:nth-child(4){
+.fa-circle:nth-child(5){
   position: absolute;
   left: 47%;
   top:180vh;
 }
-.fa-circle:nth-child(5){
+.fa-circle:nth-child(6){
   position: absolute;
   left: 50%;
   top:180vh;
@@ -167,14 +182,26 @@ cursor: pointer;
 
 
 .slide div{
-  filter: brightness(0.5);
+  display: flex;
+  justify-content: center;
+
   overflow-y: hidden;
   height: 100%;
   width: 90vw;
   margin-right: 5rem;
 }
 
+.slide div h4{
+  position: absolute;
+  z-index: 10;
+  margin: 0 auto;
+  top: 145vh;
+  font-size: 72px;
+  color: #ffffff;
+}
+
 .slide div img{
+  background:rgba(0,0,0,0.6);
   height: 100%;
   width: 90vw;
 }
