--- a/style.css
+++ b/style.css
@@ -788,3 +788,13 @@ footer img {
   color: transparent;
 
 }
+
+/* Inicio de agregar Noticias */
+#root{
+  color: rgb(219, 218, 218);
+}
+#root h4{
+font-size: 48px;
+}
+
+/*Fin de agregar Noticias*/
