--- a/style.css
+++ b/style.css
@@ -117,126 +117,65 @@ desperdiciado y seguramente sea una posible critica al diseño de la pagina*/
 .navActive{
   background-color: #363636;
 }
-/*Inicio slider*/
-.integrarFlechas{
-  display: block;
-  width: 100vw;
-  max-height: 80vh;
-  overflow-y: hidden;
+/*Nuevo slider*/
+.imagen_cifras {
+  height: 640px;
+  background-image: url('img/ciudades_noticia.png');
+  background-size: cover;
+  margin-left: 200px;
+  margin-right: 200px;
+  position: relative;
 }
 
-.integrarFlechas h2{
+.cifras_forestaton{
   margin: 1rem 0 1rem 36vw;
   width: 100%;
   color: #d8801b;
   font-family: "Roboto", sans-serif;
   font-size: 48px;
 }
-
-.slide{
-  overflow-x: visible;
-  height: 80vh;
-  width: 90vw;
-  margin:0 auto;
-display: flex;
-flex-direction: column;
-flex-wrap: wrap;
-transition: all 0.3 ease-in;
-}
-
-.flechaDerecha{
-  z-index: 10;
-position: absolute;
-right: 5rem;
-top:140vh;
-font-size: 72px;
-color: white;
-cursor: pointer;
-}
-
-.flechaIzquierda{
-  position:absolute;
-  z-index: 10;
-  top:140vh;
-  left:5.5%;
-  font-size: 72px;
-color: white;
-cursor: pointer;
-}
-
-.fa-circle{
-  color: white;
-  font-size: 32px;
-  overflow-y: hidden;
-}
-
-.fa-circle:nth-child(4){
-  position: absolute;
-  left: 44%;
-  top:180vh;
-}
-
-.fa-circle:nth-child(5){
-  position: absolute;
-  left: 47%;
-  top:180vh;
-}
-.fa-circle:nth-child(6){
-  position: absolute;
-  left: 50%;
-  top:180vh;
-}
-
-.fa-solid{
-  font-size: 34px;
-}
-
-
-.slide div{
+.flechas_y_estadistica {
   display: flex;
-  justify-content: center;
-  overflow-y: hidden;
-  height: 100%;
-  width: 90vw;
-  margin-right: 5rem;
+  justify-content: space-between;
+  align-content: center;
+  height: 550px;
   align-items: center;
+  padding: 20px;
 }
 
-.slide div div:nth-child(1){
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-blend-mode: screen;
-}
-
-.slide div div:nth-child(2){
-  background-image: url("img/dia_animal.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-filter: brightness(0.5);
-  -moz-filter: brightness(0.5);
-  -o-filter: brightness(0.5);
-  -ms-filter: brightness(0.5);
-  filter: brightness(0.5);
-}
-
-.slide div h4{
-  position:absolute;
-  z-index: 10;
-  font-size: 72px;
+.flechas_y_estadistica .estadistica {
   color: #ffffff;
+  font-family: "Roboto", sans-serif;
+  font-size: 48px;
 }
 
-.slide div:nth-child(2) h4{
-  width: 35vw;
+
+.flechas_y_estadistica i {
+  color: white;
+  cursor: pointer;
+  font-size: 48px; /* Ajusta el tamaño del icono según sea necesario */
 }
 
-.slide div img{
-  background:rgba(0,0,0,0.6);
-  height: 100%;
-  width: 90vw;
+.imagen_posicion {
+  text-align: center;
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
 }
 
-/*Fin slider*/
+.imagen_posicion i {
+  margin: 0 5px;
+  cursor: pointer;
+  color: white;
+  font-size: 30px;
+}
+
+.imagen_posicion .activo {
+  color: #d8801b;
+}
+
+
+/*fin nuevo slider*/
 .contenedorFormVoluntariado {
   width: 360px;
   height: 450px;
