--- a/style.css
+++ b/style.css
@@ -182,52 +182,45 @@ cursor: pointer;
 /*Fin slider*/
 .contenedorFormVoluntariado {
   width: 360px;
-  height: 450px;
   background-color: #121217;
   border-radius: 5px;
   position: relative;
   color: #ba822e;
   overflow: hidden;
+  margin: 0 auto;
 }
-.cajaVol {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 2;
-  padding-top: 20px;
-}
+
 .introduccionform {
-  width: 360px;
-  height: 450px;
+  padding-top: 20px;
   background-color: #121217;
   border-radius: 5px;
   color: #ba822e;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  margin: 0 auto;
   text-align: center;
 }
 .introduccionform h1{
   font-family: "Roboto", sans-serif;
+  font-size: 80px;
   color: #ffb038;
   margin-bottom: 20px;
   padding-top: 10px;
-  border-top: 1px solid #cf6300;
 }
 .introduccionform h2{
   font-family: "Roboto", sans-serif;
+  font-size: 60px;
   color: #ffb038;
   margin-bottom: 20px;
 }
 .introduccionform p{
   font-family: "Roboto", sans-serif;
   padding-bottom: 10px;
-  border-bottom: 1px solid #cf6300;
+  font-size: 20px;
 }
 .contenedorFormVoluntariado h3 {
   text-align: center;
+  font-size: 30px;
   font-family: "Roboto", sans-serif;
   margin-bottom: 20px;
   color: #ffb038;
