--- a/style.css
+++ b/style.css
@@ -685,6 +685,13 @@ footer {
   grid-row: 2 / 3;
 }
 
+.dark div{
+  margin: 0 auto;
+  border-bottom:solid 1px grey;
+  width:80%;
+  height:50px;
+}
+
 footer {
   padding: 20px;
   display: grid;
